git/svcnginx.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx
  labels:
    app: svcngnix
spec: 
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: appnginx
